[project]
name = "gemma-4-12b-it"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "gradio[mcp,oauth]>=6.19.0",
    "spaces>=0.50.4",
    "torch==2.11.0",
    "torchcodec==0.11.1",
    "torchvision==0.26.0",
    "transformers>=5.12.1",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # missing-trailing-comma
    "D203",   # one-blank-line-before-class
    "D213",   # multi-line-summary-second-line
    "E501",   # line-too-long
    "SIM117", # multiple-with-statements
    #
    "D100",    # undocumented-public-module
    "D101",    # undocumented-public-class
    "D102",    # undocumented-public-method
    "D103",    # undocumented-public-function
    "D104",    # undocumented-public-package
    "D105",    # undocumented-magic-method
    "D107",    # undocumented-public-init
    "EM101",   # raw-string-in-exception
    "FBT001",  # boolean-type-hint-positional-argument
    "FBT002",  # boolean-default-value-positional-argument
    "ISC001",  # single-line-implicit-string-concatenation
    "PGH003",  # blanket-type-ignore
    "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements
    "TRY003",  # raise-vanilla-args
]
unfixable = [
    "F401", # unused-import
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
hf-spaces = [
    "datasets>=5.0.0",
]
